# cmake-study

./: README.md
demo1/: CMakeLists.txt  study1.cpp
demo2-mul-cpp/: CMakeLists.txt  MathFunction.h  study2.cpp
demo3-dif-direc/: CMakeLists.txt  study3.cpp
demo3-dif-direc/math/: CMakeLists.txt
demo4-self-def-fun/: CMakeLists.txt  study4.cpp
demo4-self-def-fun/math/: CMakeLists.txt  MathFunction.cpp  MathFunction.h
